--- a/Analyzers/Analyzers.csproj
+++ b/Analyzers/Analyzers.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="MethodAdder.cs" />
+    <Compile Include="OrthogonalEvaluator.cs" />
     <Compile Include="SutSetupCodeFixProvider.cs" />
     <Compile Include="TestFixtureAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
