SUT setup body creator

--- a/Analyzers.Test/Analyzers.Test.csproj
+++ b/Analyzers.Test/Analyzers.Test.csproj
@@ -104,6 +104,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MethodAdderTests.cs" />
+    <Compile Include="SutSetupBodyCreatorTests.cs" />
+    <Compile Include="SutSetupCodeFixProviderTests.cs" />
     <Compile Include="Verifiers\CodeFixVerifier.cs" />
     <Compile Include="Verifiers\DiagnosticVerifier.cs" />
     <Compile Include="Helpers\CodeFixVerifier.Helper.cs" />
